// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid demo -- col 1`] = `
.c16 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.c17 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c15 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
}

.c15 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c9 {
  vertical-align: baseline;
}

.c11 {
  position: relative;
}

.c13 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c8 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c14 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
  cursor: not-allowed;
  pointer-events: none;
  color: #bbb;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c6 .c12 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c6 .c12::-webkit-input-placeholder {
  color: #abb4c3;
}

.c6 .c12::-moz-placeholder {
  color: #abb4c3;
}

.c6 .c12:-ms-input-placeholder {
  color: #abb4c3;
}

.c6 .c12::placeholder {
  color: #abb4c3;
}

.c6:hover {
  border-color: #4683e6;
}

.c6 .c12 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c6 .c7,
.c6 .c10 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c6 .c7:hover,
.c6 .c10:hover {
  color: #4074e1;
}

.c6 .c7 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c6 .c10 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="demo-form uc-fe-form "
  >
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        span
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c6"
        >
          <div>
            <span
              class="c7 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c8"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c9"
                type="caret-up"
              />
            </span>
            <span
              class="c10 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c8"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c9"
                type="caret-down"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap c11"
          >
            <input
              autocomplete="off"
              class="c12 uc-fe-numberinput-input c13"
              max="12"
              min="0"
              step="1"
              value="1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        offset
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c6"
        >
          <div>
            <span
              class="c7 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c8"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c9"
                type="caret-up"
              />
            </span>
            <span
              class="c10 uc-fe-numberinput-handler-down uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled c14"
              disabled=""
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c9"
                type="caret-down"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap c11"
          >
            <input
              autocomplete="off"
              class="c12 uc-fe-numberinput-input c13"
              max="12"
              min="0"
              step="1"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        pull
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c6"
        >
          <div>
            <span
              class="c7 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c8"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c9"
                type="caret-up"
              />
            </span>
            <span
              class="c10 uc-fe-numberinput-handler-down uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled c14"
              disabled=""
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c9"
                type="caret-down"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap c11"
          >
            <input
              autocomplete="off"
              class="c12 uc-fe-numberinput-input c13"
              max="12"
              min="0"
              step="1"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        push
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c6"
        >
          <div>
            <span
              class="c7 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c8"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c9"
                type="caret-up"
              />
            </span>
            <span
              class="c10 uc-fe-numberinput-handler-down uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled c14"
              disabled=""
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c9"
                type="caret-down"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap c11"
          >
            <input
              autocomplete="off"
              class="c12 uc-fe-numberinput-input c13"
              max="12"
              min="0"
              step="1"
              value="0"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    style="padding:10px 0;border:1px solid #ccc;"
  >
    <div
      class="uc-fe-row c15"
      type="flex"
    >
      <div
        class="c3 uc-fe-col c16"
        span="1"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111;"
        />
      </div>
      <div
        class="c3 uc-fe-col c17"
        offset="0"
        span="1"
        style="z-index:10;"
      >
        <div
          style="background:red;height:20px;border:1px solid #111;text-align:center;line-height:20px;color:white;"
        >
          target
        </div>
      </div>
      <div
        class="c3 uc-fe-col c16"
        span="1"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- col-offset 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 8.33333333%;
}

.c3 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 16.66666667%;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  margin-left: 33.33333333%;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c0:before,
.c0:after {
  content: ' ';
  display: table;
}

.c0:after {
  clear: both;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c2"
      offset="1"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        offset: 1
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c3"
      offset="2"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        offset: 2
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c4"
      offset="3"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        offset: 3
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c5"
      offset="4"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        offset: 4
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- col-order 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c3 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c0:before,
.c0:after {
  content: ' ';
  display: table;
}

.c0:after {
  clear: both;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c2"
      order="4"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        order: 4, i: 0
      </div>
    </div>
    <div
      class="c1 uc-fe-col c3"
      order="3"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        order: 3, i: 1
      </div>
    </div>
    <div
      class="c1 uc-fe-col c4"
      order="2"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        order: 2, i: 2
      </div>
    </div>
    <div
      class="c1 uc-fe-col c5"
      order="1"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        order: 1, i: 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- col-pullAndPush 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 8.33333333%;
}

.c3 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 16.66666667%;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  right: 33.33333333%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 8.33333333%;
}

.c7 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 16.66666667%;
}

.c8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 25%;
}

.c9 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  left: 33.33333333%;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c0:before,
.c0:after {
  content: ' ';
  display: table;
}

.c0:after {
  clear: both;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        pull: 1
      </div>
    </div>
    <div
      class="c1 uc-fe-col c3"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        pull: 2
      </div>
    </div>
    <div
      class="c1 uc-fe-col c4"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        pull: 3
      </div>
    </div>
    <div
      class="c1 uc-fe-col c5"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        pull: 4
      </div>
    </div>
  </div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c6"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        push: 1
      </div>
    </div>
    <div
      class="c1 uc-fe-col c7"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        push: 2
      </div>
    </div>
    <div
      class="c1 uc-fe-col c8"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        push: 3
      </div>
    </div>
    <div
      class="c1 uc-fe-col c9"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;font-size:14px;color:#FFF;text-align:center;"
      >
        push: 4
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- col-span 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.c3 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 33.33333333%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.c7 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 50%;
}

.c8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 58.33333333%;
}

.c9 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 66.66666667%;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c0:before,
.c0:after {
  content: ' ';
  display: table;
}

.c0:after {
  clear: both;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="uc-fe-row c0"
  >
    <div
      class="c1 uc-fe-col c2"
      span="1"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 1
      </div>
    </div>
    <div
      class="c1 uc-fe-col c3"
      span="2"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 2
      </div>
    </div>
    <div
      class="c1 uc-fe-col c4"
      span="3"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 3
      </div>
    </div>
    <div
      class="c1 uc-fe-col c5"
      span="4"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 4
      </div>
    </div>
    <div
      class="c1 uc-fe-col c6"
      span="5"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 5
      </div>
    </div>
    <div
      class="c1 uc-fe-col c7"
      span="6"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 6
      </div>
    </div>
    <div
      class="c1 uc-fe-col c8"
      span="7"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 7
      </div>
    </div>
    <div
      class="c1 uc-fe-col c9"
      span="8"
    >
      <div
        style="background:#888;height:20px;line-height:20px;border:1px solid #111;margin-bottom:10px;font-size:14px;color:#FFF;text-align:center;"
      >
        span: 8
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row 1`] = `
.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c31 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c32 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c33 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c34 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c35 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c36 .c3 {
  padding-left: 0px;
  padding-right: 0px;
}

.c37 .c3 {
  padding-left: 1px;
  padding-right: 1px;
}

.c38 .c3 {
  padding-left: 2px;
  padding-right: 2px;
}

.c39 .c3 {
  padding-left: 4px;
  padding-right: 4px;
}

.c40 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c41 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c42 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c43 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c44 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c30 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c30:before,
.c30:after {
  content: ' ';
  display: table;
}

.c30:after {
  clear: both;
}

.c30 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c21 {
  vertical-align: baseline;
}

.c27 {
  position: relative;
}

.c29 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c25 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c23 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c23 .c28 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c23 .c28::-webkit-input-placeholder {
  color: #abb4c3;
}

.c23 .c28::-moz-placeholder {
  color: #abb4c3;
}

.c23 .c28:-ms-input-placeholder {
  color: #abb4c3;
}

.c23 .c28::placeholder {
  color: #abb4c3;
}

.c23:hover {
  border-color: #4683e6;
}

.c23 .c28 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c23 .c24,
.c23 .c26 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c23 .c24:hover,
.c23 .c26:hover {
  color: #4074e1;
}

.c23 .c24 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c23 .c26 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c20 {
  margin-right: 8px;
  font-size: 14px;
}

.c18 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c18 .c19 {
  color: #4074e1;
}

.c22 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c16 {
  position: relative;
  margin-bottom: -8px;
}

.c16 .c17,
.c16 .style__RadioTagWrap-sc-25j3mq-3,
.c16 .style__RadioCardWrap-sc-25j3mq-8 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c16 .c17:last-child,
.c16 .style__RadioTagWrap-sc-25j3mq-3:last-child,
.c16 .style__RadioCardWrap-sc-25j3mq-8:last-child {
  margin-right: 0;
}

.c16 .c46+.c46 {
  margin-left: -1px;
}

.c16 .c45 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c16 .c45:first-child {
  border-radius: 2px 0 0 2px;
}

.c16 .c45:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c8 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c10 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c13 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c15 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c6 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c6:hover {
  border-color: #4683e6;
}

.c6 .c12 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c6 .c14 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c6 .c7 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c6 .c9,
.c6 .c11 {
  line-height: 16px;
}

.c6 .c9 {
  padding-right: 20px;
}

.c6 .c11 {
  padding-left: 20px;
}

.c6 .c9 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form "
  >
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        flex
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <span
              class="c9 c10"
            >
              ON
            </span>
            <span
              class="c11 c10"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        align
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="c16"
        >
          <div
            checked=""
            class="c17 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c18"
          >
            <i
              class="c19 c20 uc-fe-icon icon__cbox-ed c21"
              type="cbox-ed"
            />
            top
          </div>
          <div
            class="c17 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c22"
          >
            <i
              class="c19 c20 uc-fe-icon icon__circle c21"
              type="circle"
            />
            middle
          </div>
          <div
            class="c17 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c22"
          >
            <i
              class="c19 c20 uc-fe-icon icon__circle c21"
              type="circle"
            />
            bottom
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        justify
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="c16"
        >
          <div
            checked=""
            class="c17 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c18"
          >
            <i
              class="c19 c20 uc-fe-icon icon__cbox-ed c21"
              type="cbox-ed"
            />
            start
          </div>
          <div
            class="c17 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c22"
          >
            <i
              class="c19 c20 uc-fe-icon icon__circle c21"
              type="circle"
            />
            end
          </div>
          <div
            class="c17 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c22"
          >
            <i
              class="c19 c20 uc-fe-icon icon__circle c21"
              type="circle"
            />
            center
          </div>
          <div
            class="c17 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c22"
          >
            <i
              class="c19 c20 uc-fe-icon icon__circle c21"
              type="circle"
            />
            space-around
          </div>
          <div
            class="c17 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c22"
          >
            <i
              class="c19 c20 uc-fe-icon icon__circle c21"
              type="circle"
            />
            space-between
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        gutter
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c23"
        >
          <div>
            <span
              class="c24 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c25"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c21"
                type="caret-up"
              />
            </span>
            <span
              class="c26 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c25"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c21"
                type="caret-down"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap c27"
          >
            <input
              autocomplete="off"
              class="c28 uc-fe-numberinput-input c29"
              min="0"
              step="1"
              value="16"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    style="height:40px;border:1px solid #ccc;"
  >
    <div
      class="uc-fe-row c30"
      style="height:100%;"
    >
      <div
        class="c3 uc-fe-col c31"
        span="3"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111;"
        />
      </div>
      <div
        class="c3 uc-fe-col c31"
        span="3"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111;"
        />
      </div>
      <div
        class="c3 uc-fe-col c31"
        span="3"
      >
        <div
          style="background:#888;height:20px;border:1px solid #111;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row-align 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 33.33333333%;
}

.c5 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c6 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c4 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c4 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 uc-fe-col c2"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c3"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 uc-fe-col c2"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c4"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 uc-fe-col c2"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row-base 1`] = `
.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c7 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 33.33333333%;
}

.c8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 50%;
}

.c3 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 66.66666667%;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c0:before,
.c0:after {
  content: ' ';
  display: table;
}

.c0:after {
  clear: both;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c9 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c10 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c11 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c12 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c2"
      span="6"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="6"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c3"
      span="8"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c4"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c5"
      span="1"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c6"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c7"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c8"
      span="5"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c7"
      span="4"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c6"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c4"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c6"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c5"
      span="1"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row-gutter 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c6:before,
.c6:after {
  content: ' ';
  display: table;
}

.c6:after {
  clear: both;
}

.c6 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c7 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c8 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c9 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c10 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  margin-left: 0px;
  margin-right: 0px;
}

.c0:before,
.c0:after {
  content: ' ';
  display: table;
}

.c0:after {
  clear: both;
}

.c0 .c1 {
  padding-left: 0px;
  padding-right: 0px;
}

.c3 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -1px;
  margin-right: -1px;
}

.c3:before,
.c3:after {
  content: ' ';
  display: table;
}

.c3:after {
  clear: both;
}

.c3 .c1 {
  padding-left: 1px;
  padding-right: 1px;
}

.c4 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -2px;
  margin-right: -2px;
}

.c4:before,
.c4:after {
  content: ' ';
  display: table;
}

.c4:after {
  clear: both;
}

.c4 .c1 {
  padding-left: 2px;
  padding-right: 2px;
}

.c5 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -4px;
  margin-right: -4px;
}

.c5:before,
.c5:after {
  content: ' ';
  display: table;
}

.c5:after {
  clear: both;
}

.c5 .c1 {
  padding-left: 4px;
  padding-right: 4px;
}

<div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c3"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c4"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c5"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c6"
    style="margin-bottom:10px;"
  >
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="3"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
</div>
`;

exports[`Grid demo -- row-justify 1`] = `
.c2 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c7 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c8 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c9 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c10 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c11 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c12 .c1 {
  padding-left: 0px;
  padding-right: 0px;
}

.c13 .c1 {
  padding-left: 1px;
  padding-right: 1px;
}

.c14 .c1 {
  padding-left: 2px;
  padding-right: 2px;
}

.c15 .c1 {
  padding-left: 4px;
  padding-right: 4px;
}

.c0 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c4 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c5 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

.c6 {
  position: relative;
  display: block;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: -8px;
  margin-right: -8px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c1 {
  padding-left: 8px;
  padding-right: 8px;
}

<div>
  <div
    class="uc-fe-row c0"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c3"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c4"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c5"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
  <div
    class="uc-fe-row c6"
    style="margin-bottom:10px;height:40px;border:1px solid #ccc;"
    type="flex"
  >
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
    <div
      class="c1 uc-fe-col c2"
      span="2"
    >
      <div
        style="background:#888;height:20px;border:1px solid #111;"
      />
    </div>
  </div>
</div>
`;
